# BOW_transferlearning

./: .gitignore  Dockerfile  Fasttext_turtorial .ipynb  Fasttext_tutorial .ipynb  LICENSE  README.md  bow_turtorial.ipynb  bow_tutorial.ipynb  makefile  presentation.ipynb  presentation.slides.html  pyproject.toml  requirements.txt  word2vec_tutorial.ipynb
ollama/: chat_docs.py  chat_promt.py  constants.py  pdf_loader.py
src/: test_venv.py
src/model/: bow.py  fasttext.py  sciWrapFasttext.py  word2vec.py
src/preprocessing/: metrics.py  text_pre.py
ulmfit/: Dockerfile  ulmfit_turtorial.ipynb
