[tool.poetry]
name = "bow-transferlearning"
version = "0.1.0"
description = "where nlp i happening"
authors = ["Niels Helsø"]
readme = "README.md"
packages = [{include = "bow_transferlearning"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
langchain = "0.0.261"
gpt4all = "^1.0.3"
chromadb = "^0.3.26"
PyMuPDF = "^1.22.5"
python-dotenv = "^1.0.0"
unstructured = "^0.8.0"
extract-msg = "^0.41.5"
tabulate = "^0.9.0"
pandoc = "^2.3"
pypandoc = "^1.11"
tqdm = "^4.65.0"
sentence-transformers = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
